--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MichaelFrieze/checking-out-koa#readme",
   "dependencies": {
     "koa": "^2.5.3",
+    "koa-bodyparser": "^4.2.1",
     "koa-ejs": "^4.1.2",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0"
