fixed up our package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "checking-out-koa",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev-start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
